fix: fix overflow bug

--- a/views/scss/qti/_associate.scss
+++ b/views/scss/qti/_associate.scss
@@ -18,7 +18,6 @@
         & > .qti-choice {
             min-width: 100px;
             min-height: 30px;
-            max-width: 180px;
             .qti-block {
                 img {
                     display: flex;
